--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nodebb-plugin-modmin",
   "version": "1.3.3",
+  "main": "library.js",
   "author": {
     "name": "yariplus",
     "email": "tafike@gmail.com"
